Currency and Menu done

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<link rel="stylesheet" type="text/css" href="jsga.css" />
 	</head>
 	<body>
-		<jsga>
-		</jsga>	
+		<ga-jsga>
+		</ga-jsga>	
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script rel="JavaScript" src="jsga.js"></script>
 	</body>
