Completed major regular-use modules

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		<ga-jsga>
 		</ga-jsga>	
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script rel="JavaScript" src="modules/hud.js"></script>
 		<script rel="JavaScript" src="jsga.js"></script>
+		<script>
+			JSGA();
+		</script>
 	</body>
 </html>
